# lab_oop_7

./: CMakeLists.txt
src/: main.cpp
